<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/category_display_title"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="icon_style"
            android:title="@string/icon_style_title"
            android:dialogTitle="@string/icon_style_title"
            android:entries="@array/icon_style_entries"
            android:entryValues="@array/icon_style_values"
            android:defaultValue="COLOR"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="notification_dots"
            android:title="@string/notification_dots_title"
            android:summary="@string/notification_dots_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_drawer_title"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="search_auto_launch"
            android:title="@string/search_auto_launch_title"
            android:summary="@string/search_auto_launch_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="hidden_apps"
            android:title="@string/settings_hidden_apps_title"
            android:summary="@string/settings_hidden_apps_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_wallpaper_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="choose_wallpaper"
            android:title="@string/wallpaper_choose_title"
            android:summary="@string/wallpaper_choose_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="clear_wallpaper"
            android:title="@string/wallpaper_clear_title"
            android:summary="@string/wallpaper_clear_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_homeinfo_title"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="show_calendar_event"
            android:title="@string/show_calendar_event_title"
            android:summary="@string/show_calendar_event_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="show_alarm"
            android:title="@string/show_alarm_title"
            android:summary="@string/show_alarm_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_backup_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="export_layout"
            android:title="@string/backup_export"
            android:summary="@string/backup_export_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="import_layout"
            android:title="@string/backup_import"
            android:summary="@string/backup_import_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="factory_reset"
            android:title="@string/factory_reset_title"
            android:summary="@string/factory_reset_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_privacy_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="crash_reports"
            android:title="@string/crash_report_setting_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <!-- ACRA dev commands: hidden at runtime unless BuildConfig.SHOW_DEV_COMMANDS
         (debug, or a personal -PdevCommands release). Mirrors Kolibri. -->
    <PreferenceCategory
        android:key="dev_commands"
        android:title="@string/dev_commands_category_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="dev_throw_test"
            android:title="@string/dev_throw_test_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="dev_silent_error"
            android:title="@string/dev_silent_error_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="dev_warn_test"
            android:title="@string/dev_warn_test_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
